--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>GuestBook
-		</title>
+		<title>GuestBook</title>
 		<link
 		rel="shortcut icon" href="favicon.ico">
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
@@ -16,6 +15,19 @@
 		{% endblock %}
 	</head>
 	<body>
+		<header>
+			<h1>
+				<a href="{{ path('homepage') }}">Guestbook</a>
+			</h1>
+			<ul>
+				{% for conference in conferences %}
+					<li>
+						<a href="{{ path('conference', { id: conference.id }) }}">{{ conference }}</a>
+					</li>
+				{% endfor %}
+			</ul>
+			<hr/>
+		</header>
 		{% block body %}{% endblock %}
 	</body>
 </html>
